--- a/package.json
+++ b/package.json
@@ -11,31 +11,31 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@angular/core": "16.0.0-next.0",
+    "@angular/core": "16.1.2",
     "@preact/signals": "^1.1.3",
     "@reactively/core": "^0.0.8",
     "@solidjs/reactivity": "^0.0.9",
-    "@vue/reactivity": "^3.2.47",
+    "@vue/reactivity": "^3.3.4",
     "compostate": "^0.5.1",
     "kairo": "0.6.0-rc.0",
     "mobx": "^6.9.0",
-    "mol_wire_lib": "^1.0.553",
-    "oby": "13.1.4",
-    "preact": "^10.13.2",
+    "mol_wire_lib": "^1.0.645",
+    "oby": "14.3.0",
+    "preact": "^10.15.1",
     "s-js": "^0.4.9",
-    "solid-js": "^1.7.3",
+    "solid-js": "^1.7.6",
     "usignal": "^0.9.0"
   },
   "devDependencies": {
-    "@types/node": "^18.15.11",
-    "esbuild": "^0.17.16",
-    "rxjs": "^7.8.0",
+    "@types/node": "^20.3.1",
+    "esbuild": "^0.18.8",
+    "rxjs": "^7.8.1",
     "v8-natives": "^1.2.5",
-    "vitest": "^0.30.1"
+    "vitest": "^0.32.2"
   },
   "pnpm": {
     "patchedDependencies": {
-      "@angular/core@16.0.0-next.0": "patches/@angular__core@16.0.0-next.0.patch"
+      "@angular/core@16.1.2": "patches/@angular__core@16.1.2.patch"
     }
   }
 }
