--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "vitest",
-    "build": "esbuild src/index.ts --external:v8-natives --bundle --format=esm --sourcemap --platform=node --outfile=dist/out.js",
-    "bench:build": "node --allow-natives-syntax dist/out.js",
+    "bench:debug": "node --allow-natives-syntax --loader @esbuild-kit/esm-loader src/index.ts",
     "bench": "esbuild src/index.ts --external:v8-natives --bundle --format=cjs --platform=node | node --allow-natives-syntax"
   },
   "keywords": [],
@@ -30,6 +29,7 @@
     "usignal": "^0.9.0"
   },
   "devDependencies": {
+    "@esbuild-kit/esm-loader": "^2.6.5",
     "@types/node": "^20.5.1",
     "esbuild": "^0.19.2",
     "rxjs": "^7.8.1",
