--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "vitest",
-    "bench": "esbuild src/index.ts --external:v8-natives --bundle --format=cjs --platform=node | node --allow-natives-syntax"
+    "build": "esbuild src/index.ts --bundle --format=iife --target=esnext --outfile=public/dist/index.js --sourcemap",
+    "start": "serve public",
+    "chrome": "chrome --no-sandbox --js-flags=--log-deopt,--log-ic,--log-maps,--log-maps-details,--log-internal-timer-events,--prof,--expose-gc,--detailed-line-info --enable-precise-memory-info --user-data-dir=$(PWD)/chrome http://localhost:3000"
   },
   "keywords": [],
   "author": "",
@@ -15,27 +17,21 @@
     "@preact/signals": "^1.2.1",
     "@reactively/core": "^0.0.8",
     "@solidjs/reactivity": "^0.0.9",
-    "@vue/reactivity": "^3.3.4",
+    "@vue/reactivity": "^3.3.7",
     "compostate": "^0.5.1",
     "kairo": "0.6.0-rc.0",
     "mobx": "^6.10.2",
-    "mol_wire_lib": "^1.0.754",
-    "oby": "14.3.2",
+    "mol_wire_lib": "^1.0.784",
+    "oby": "14.3.5",
     "preact": "^10.18.1",
     "s-js": "^0.4.9",
-    "solid-js": "^1.7.12",
+    "solid-js": "^1.8.4",
     "usignal": "^0.9.0"
   },
   "devDependencies": {
-    "@types/node": "^20.8.0",
-    "esbuild": "^0.19.4",
-    "rxjs": "^7.8.1",
-    "v8-natives": "^1.2.5",
+    "@types/node": "^20.8.9",
+    "esbuild": "^0.19.5",
+    "serve": "^14.2.1",
     "vitest": "^0.34.6"
-  },
-  "pnpm": {
-    "patchedDependencies": {
-      "@angular/core@16.2.7": "patches/@angular__core@16.2.7.patch"
-    }
   }
 }
