--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "oby": "14.3.1",
     "preact": "^10.17.1",
     "s-js": "^0.4.9",
+    "signal-polyfill": "^0.1.0",
     "solid-js": "^1.7.11",
     "usignal": "^0.9.0"
   },
