--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "vitest",
-    "build": "esbuild src/index.ts --bundle --format=iife --target=esnext --outfile=public/dist/index.js --sourcemap",
+    "build": "esbuild src/index.ts --bundle --format=iife --target=esnext --outfile=public/dist/index.js --sourcemap=inline",
     "start": "serve public",
     "chrome": "chrome --no-sandbox --js-flags=--log-deopt,--log-ic,--log-maps,--log-maps-details,--log-internal-timer-events,--prof,--expose-gc,--detailed-line-info --enable-precise-memory-info --user-data-dir=$(PWD)/chrome http://localhost:3000"
   },
@@ -13,25 +13,25 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@angular/core": "17.0.0-rc.1",
-    "@preact/signals": "^1.2.1",
+    "@angular/core": "17.0.2",
+    "@preact/signals": "^1.2.3",
     "@reactively/core": "^0.0.8",
     "@solidjs/reactivity": "^0.0.9",
-    "@vue/reactivity": "^3.3.7",
+    "@vue/reactivity": "^3.4.27",
     "compostate": "^0.5.1",
     "kairo": "0.6.0-rc.0",
-    "mobx": "^6.10.2",
-    "mol_wire_lib": "^1.0.784",
-    "oby": "14.3.5",
-    "preact": "^10.18.1",
+    "mobx": "^6.12.3",
+    "mol_wire_lib": "^1.0.1035",
+    "oby": "15.1.0",
+    "preact": "^10.22.0",
     "s-js": "^0.4.9",
-    "solid-js": "^1.8.4",
+    "solid-js": "^1.8.17",
     "usignal": "^0.9.0"
   },
   "devDependencies": {
-    "@types/node": "^20.8.9",
-    "esbuild": "^0.19.5",
-    "serve": "^14.2.1",
+    "@types/node": "^20.12.12",
+    "esbuild": "^0.19.12",
+    "serve": "^14.2.3",
     "vitest": "^0.34.6"
   }
 }
