--- a/package.json
+++ b/package.json
@@ -13,25 +13,28 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@angular/core": "17.0.2",
-    "@preact/signals": "^1.2.3",
+    "@angular/core": "19.0.0",
+    "@preact/signals": "^1.3.0",
     "@reactively/core": "^0.0.8",
     "@solidjs/reactivity": "^0.0.9",
-    "@vue/reactivity": "^3.4.27",
+    "@vue/reactivity": "^3.5.13",
+    "alien-signals": "^0.4.3",
     "compostate": "^0.5.1",
     "kairo": "0.6.0-rc.0",
-    "mobx": "^6.12.3",
-    "mol_wire_lib": "^1.0.1035",
-    "oby": "15.1.0",
-    "preact": "^10.22.0",
+    "mobx": "^6.13.5",
+    "mol_wire_lib": "^1.0.1204",
+    "oby": "15.1.2",
+    "preact": "^10.25.0",
     "s-js": "^0.4.9",
-    "solid-js": "^1.8.17",
+    "signal-polyfill": "^0.2.1",
+    "solid-js": "^1.9.3",
+    "svelte": "^5.2.8",
     "usignal": "^0.9.0"
   },
   "devDependencies": {
-    "@types/node": "^20.12.12",
-    "esbuild": "^0.19.12",
-    "serve": "^14.2.3",
-    "vitest": "^0.34.6"
+    "@types/node": "^22.9.4",
+    "esbuild": "^0.24.0",
+    "serve": "^14.2.4",
+    "vitest": "^2.1.5"
   }
 }
