--- a/package.json
+++ b/package.json
@@ -2,18 +2,21 @@
   "name": "js-reactivity-benchmark",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "type": "module",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "tsc": "tsc",
     "test": "vitest",
-    "build": "esbuild src/index.ts --bundle --format=iife --target=esnext --outfile=public/dist/index.js --sourcemap=inline",
+    "prepare": "esbuild src/index.ts --bundle --format=esm --target=esnext --outdir=dist --sourcemap=external && tsc -p tsconfig.d.json",
+    "build": "esbuild src/main.ts --bundle --format=iife --target=esnext --outfile=public/dist/index.js --sourcemap=inline",
     "start": "serve public",
     "chrome": "chrome --no-sandbox --js-flags=--log-deopt,--log-ic,--log-maps,--log-maps-details,--log-internal-timer-events,--prof,--expose-gc,--detailed-line-info --enable-precise-memory-info --user-data-dir=$(PWD)/chrome http://localhost:3000"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
+  "devDependencies": {
     "@angular/core": "19.1.5",
     "@preact/signals": "^2.0.1",
     "@reactively/core": "^0.0.8",
@@ -29,9 +32,7 @@
     "signal-polyfill": "^0.2.2",
     "solid-js": "^1.9.4",
     "svelte": "^5.20.0",
-    "usignal": "^0.9.0"
-  },
-  "devDependencies": {
+    "usignal": "^0.9.0",
     "@types/node": "^22.13.1",
     "esbuild": "^0.25.0",
     "serve": "^14.2.4",
