--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -8,8 +8,12 @@
     "chrome": "chrome --no-sandbox --js-flags=--log-deopt,--log-ic,--log-maps,--log-maps-details,--log-internal-timer-events,--prof,--expose-gc,--detailed-line-info --enable-precise-memory-info --user-data-dir=$(PWD)/chrome http://localhost:3000"
   },
   "dependencies": {
+    "d3": "^7.9.0",
     "js-reactivity-benchmark": "workspace:*",
     "vite": "^6.2.6"
   },
-  "packageManager": "pnpm@10.8.0"
+  "packageManager": "pnpm@10.8.0",
+  "devDependencies": {
+    "@types/d3": "^7.4.3"
+  }
 }
