--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "prettier": "*"
+    "prettier": "^3.5.3"
   },
   "packageManager": "pnpm@10.8.0"
 }
