--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -15,11 +15,10 @@
   "license": "ISC",
   "devDependencies": {
     "@amadeus-it-group/tansu": "^2.0.0",
-    "@angular/core": "19.2.6",
+    "@angular/core": "20.0.0-next.6",
     "@preact/signals": "^2.0.3",
     "@reactively/core": "^0.0.8",
     "@solidjs/signals": "^0.2.5",
-    "@types/node": "^22.14.1",
     "@vue/reactivity": "^3.5.13",
     "alien-signals": "^1.0.13",
     "compostate": "^0.5.1",
