--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -26,6 +26,7 @@
     "mobx": "^6.13.7",
     "mol_wire_lib": "^1.0.1371",
     "oby": "15.1.2",
+    "pota": "^0.17.178",
     "preact": "^10.26.5",
     "s-js": "^0.4.9",
     "signal-polyfill": "^0.2.2",
