--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -15,26 +15,26 @@
   "license": "ISC",
   "devDependencies": {
     "@amadeus-it-group/tansu": "^2.0.0",
-    "@angular/core": "20.0.0-next.6",
-    "@preact/signals": "^2.0.4",
+    "@angular/core": "20.1.4",
+    "@preact/signals": "^2.2.1",
     "@reactively/core": "^0.0.8",
     "@solidjs/signals": "^0.3.2",
-    "@vue/reactivity": "^3.5.13",
-    "alien-signals": "^2.0.1",
+    "@vue/reactivity": "^3.5.18",
+    "alien-signals": "^2.0.6",
     "compostate": "^0.5.1",
-    "esbuild": "^0.25.3",
+    "esbuild": "^0.25.8",
     "mobx": "^6.13.7",
-    "mol_wire_lib": "^1.0.1387",
+    "mol_wire_lib": "^1.0.1486",
     "oby": "15.1.2",
-    "pota": "^0.17.179",
-    "preact": "^10.26.5",
+    "pota": "^0.19.203",
+    "preact": "^10.27.0",
     "s-js": "^0.4.9",
     "signal-polyfill": "^0.2.2",
-    "solid-js": "^1.9.5",
-    "svelte": "^5.28.2",
-    "typescript": "^5.8.3",
-    "usignal": "^0.9.0",
-    "vitest": "^3.1.1"
+    "solid-js": "^1.9.7",
+    "svelte": "^5.37.3",
+    "typescript": "^5.9.2",
+    "usignal": "^0.10.0",
+    "vitest": "^3.2.4"
   },
-  "packageManager": "pnpm@10.10.0"
+  "packageManager": "pnpm@10.14.0"
 }
