Add memory benchmarks and new frameworks

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -8,7 +8,10 @@
   "scripts": {
     "tsc": "tsc",
     "test": "vitest",
-    "build": "esbuild src/index.ts --bundle --format=esm --target=esnext --outdir=dist --sourcemap=external && tsc -p tsconfig.json"
+    "build": "esbuild src/index.ts --bundle --format=esm --target=esnext --outdir=dist --sourcemap=external && tsc -p tsconfig.json",
+    "bench:memory": "bun --bun --expose-gc src/runMemoryBench.ts",
+    "bench:memory:node": "node --expose-gc --loader tsx src/runMemoryBench.ts",
+    "bench:compare": "bun --bun --expose-gc src/runMemoryComparison.ts"
   },
   "keywords": [],
   "author": "",
@@ -16,23 +19,24 @@
   "devDependencies": {
     "@amadeus-it-group/tansu": "^2.0.0",
     "@angular/core": "20.1.7",
-    "@preact/signals": "^2.2.1",
+    "@preact/signals": "^2.5.1",
     "@reactively/core": "^0.0.8",
-    "@solidjs/signals": "^0.4.1",
-    "@vue/reactivity": "^3.5.18",
-    "alien-signals": "^2.0.6",
+    "@solidjs/signals": "^0.4.11",
+    "@vue/reactivity": "^3.5.26",
+    "@zeix/cause-effect": "0.17.3",
+    "alien-signals": "^2.0.8",
     "compostate": "^0.5.1",
-    "esbuild": "^0.25.9",
-    "mobx": "^6.13.7",
-    "mol_wire_lib": "^1.0.1499",
+    "esbuild": "^0.25.12",
+    "mobx": "^6.15.0",
+    "mol_wire_lib": "^1.0.1644",
     "oby": "15.1.2",
-    "pota": "^0.19.205",
-    "preact": "^10.27.0",
+    "pota": "^0.19.213",
+    "preact": "^10.28.2",
     "s-js": "^0.4.9",
     "signal-polyfill": "^0.2.2",
-    "solid-js": "^1.9.9",
-    "svelte": "^5.38.1",
-    "typescript": "^5.9.2",
+    "solid-js": "^1.9.10",
+    "svelte": "^5.46.1",
+    "typescript": "^5.9.3",
     "usignal": "^0.10.0",
     "vitest": "^3.2.4"
   },
